# OggPoW-Miner

./: .gitignore  CMakeLists.txt  README.md
Oggminer for Windows/: pool_mine_OGG.bat  solo_mine_OGG.bat
libdevcore/: Common.h  CommonData.cpp  Log.cpp  vector_ref.h
libethash-cl/: CMakeLists.txt
libethash-cl/CL/: cl2.hpp  opencl.h
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner_kernel.cu
libethcore/: Farm.cpp
libhwmon/: CMakeLists.txt
libpoolprotocols/: PoolManager.cpp
libpoolprotocols/getwork/: EthGetworkClient.cpp
libprogpow/: ProgPow.cpp  ProgPow.h
progminer/: main.cpp
